# tripletriad-cpp

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  configure.ac  data.txt.sample
src/: Card.cpp  Card.h  GameBoard.cpp  GameBoard.h  Makefile.am  Makefile.in  Move.cpp  Move.h  Player.cpp  Player.h  Square.h  TranspositionTable.cpp  TranspositionTable.h  TripleTriad.cpp  TripleTriad.h  card.cc  card.hh  common.hh  enum.h  game_board.cc  game_board.hh  move.cc  move.hh  player.cc  player.hh  square.cc  square.hh  transposition_table.cc  transposition_table.hh  tripletriad.cc  tripletriad.hh
