bin_PROGRAMS = tripletriad

tripletriad_SOURCES = \
	src/card.cc \
	src/card.hh \
	src/common.hh \
	src/game_board.cc \
	src/game_board.hh \
	src/move.cc \
	src/move.hh \
	src/player.cc \
	src/player.hh \
	src/square.cc \
	src/square.hh \
	src/transposition_table.cc \
	src/transposition_table.hh \
	src/tripletriad.cc \
	src/tripletriad.hh

tripletriad_CXXFLAGS = -std=gnu++0x -pedantic -Wall -Wextra -Wwrite-strings
