bin_PROGRAMS = tripletriad

tripletriad_SOURCES = \
	card.cc \
	card.hh \
	common.hh \
	game_board.cc \
	game_board.hh \
	move.cc \
	move.hh \
	player.cc \
	player.hh \
	square.cc \
	square.hh \
	transposition_table.cc \
	transposition_table.hh \
	tripletriad.cc \
	tripletriad.hh

tripletriad_CXXFLAGS = -std=gnu++0x -pedantic -Wall -Wextra -Wwrite-strings
